
  [ Ludovic Claude ]
  * Move apt-file, devscripts, subversion from Recommends: to Suggests: as
    they are only required when mh_make is used
  * mh_make: rescan the Maven repository after the user installs a required package.
  * mh_resolve_dependencies: Also launch Maven in offline mode
    (with --offline option) when --offline parameter is used.

  [ Damien Raude-Morvan ]
  * md_make: Update debian/copyright template for latest DEP-5 format.

 -- Damien Raude-Morvan <drazzib@debian.org>  Sat, 25 Jun 2011 13:36:55 +0200

maven-debian-helper (1.4.3) unstable; urgency=low

  * DependenciesSolver: Don't use Properties.store() method since
    it escape some chars (like " >\=") from variables.
    Replace it with simple FileWriter. Closes: #628272.
  * SysInstallMojo: Send "--keep-elements" flag to POMCleaner if its
    set in <pkg>.poms file. Thanks to James Page <james.page@canonical.com>.
    Closes: #613364
  * mh_resolve_dependencies: Always launch Maven in offline mode
    with --offline option (as already done on mh_make). Closes: #629356
  * SysInstallDocMojo, SysInstallMojo: Drop initProperties method and only rely
    on Maven mojo attributes injection of "debianPackage" and "destPackage".
    Closes: #628693.
  * mh_resolve_dependencies: New --javadoc param, send from maven.mk CDBS file
    to automatically compute Javadoc dependencies when there is some *-doc
    package. Closes: #628703.

 -- Damien Raude-Morvan <drazzib@debian.org>  Thu, 09 Jun 2011 00:11:08 +0200

maven-debian-helper (1.4.2) unstable; urgency=low

  * mh_resolve_dependencies: Handle --verbose option has described in
    documentation (it was previously just ignored).
  * DependenciesSolver: In case we didn't found anything for "jar" type,
    just check for a "bundle" type inside repository

 -- Damien Raude-Morvan <drazzib@debian.org>  Sat, 14 May 2011 22:59:17 +0200

maven-debian-helper (1.4.1) unstable; urgency=low

  * Upload to unstable.
